force-app/main/default/objects/RecipientGroupRelation__c/RecipientGroupRelation__c.object-meta.xml
<CustomObject>
    <label>Recipient Group Relation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipient Groups Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>