force-app/main/default/objects/RecipientGroupRelation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recipient Groups Relations</relationshipLabel>
    <relationshipName>Recipient_Groups_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>