force-app/main/default/objects/RecipientGroupRelation__c/fields/RecipientGroup__c.field-meta.xml
<CustomField>
    <fullName>RecipientGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Group</label>
    <referenceTo>RecipientGroup__c</referenceTo>
    <relationshipLabel>Recipient Groups Relations</relationshipLabel>
    <relationshipName>Users_Groups_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>